--- a/Connect4Game.html
+++ b/Connect4Game.html
@@ -22,10 +22,14 @@
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
             crossorigin="anonymous"></script>
         <script src="Connect4Game.js" async defer></script>
-        <div class="container" align="center">
+        <div class="container" id="winBanner">
+            <div class="alert alert-success" role="alert" id="winBannerText">
+            </div>       
+        </div> 
+        <div id="board" class="container" align="center">
             <h1>Welcome to Connect Four!</h1>
-            <h2 >Connect 4!</h2>
             <h3>Let's Start!</h3>
+            <hr>
             <table>
                 <tr>
                     <td></td>
@@ -82,6 +86,8 @@
                     <td></td>
                 </tr>
             </table>
+            <hr>
+            <button type="button" class="btn btn-primary" id="clicks">Clicks: <span class="badge badge-light">0</span></button>            
         </div>
     </body>
 </html>
